# hallucinator

./: README.md  pyproject.toml  requirements.txt  setup.cfg
data/raw_data/: 12d0777f-2369-4dee-a583-7a537c63504c.json  3ee8e707-fbd5-4af7-a468-79ca4236f1a6.json  5302740b-35db-484e-9a36-3e0cf4949174.json  668e8cae-7834-4359-826b-a59fabd831df.json  7d54323f-73e8-4e1b-972f-f85da5cc43ce.json  b7c4a140-a716-4f6f-9242-7d70d9000d8c.json  ba86e267-d12e-4d44-9ac8-f126ed0b41f2.json  c0bc5c2a-36b5-45fa-93d6-56729cd8880e.json  c6872237-601c-4cf0-a946-7acfd674f04d.json
scripts/: check_sum.sh  plot_parsed_raw_data.py
src/: hallucinator.py  parse_raw_data.py  plot_hallucinations.py
src/hallucinator/: __init__.py  cli.py  config.py  hallucinate.py  plotter.py  utilities.py
